Fix userMenu overflow and pointer-events popUpBal

--- a/src/scss/layout/_popUp-balance.scss
+++ b/src/scss/layout/_popUp-balance.scss
@@ -12,6 +12,8 @@
   transition: all 0.7s ease-out;
   opacity: 0;
 
+  pointer-events: none;
+
   z-index: 10;
 
   background-color: setcolor("black", "dark1");
