--- a/src/scss/objects/user/_common.scss
+++ b/src/scss/objects/user/_common.scss
@@ -55,3 +55,7 @@
     border: 1px solid #d4d6d9;
   }
 }
+
+.pageContainer {
+  overflow-x: hidden;
+}
